# dsnd_dashboard_project

./: .sesskey  README.md  pyproject.toml  requirements.txt
python-package/employee_events/: employee.py  query_base.py  sql_execution.py  team.py
report/: dashboard.py  utils.py
tests/: test_employee_events.py
